# otus_smart_home_rs

./: Cargo.toml
api_client/: Cargo.toml
api_client/src/: main.rs
app_with_c_lib/: Cargo.toml
app_with_c_lib/src/: main.rs
c_socket/: Cargo.toml
c_socket/src/: lib.rs
echo/: Cargo.toml
examples/: simple.rs
iced_060_test/: Cargo.toml
iced_060_test/src/: main.rs
shp/: Cargo.toml
shp/src/: lib.rs
smart_home/: Cargo.toml
smart_home/examples/: simple.rs  tcp_socket.rs
smart_home/src/: lib.rs  main.rs
smart_home/src/homes/: home.rs
smart_home/src/homes/rooms/: room.rs
smart_home/src/homes/rooms/units/: error.rs  mod.rs  socket.rs  thermometer.rs  unit.rs  unit_builder.rs  unit_visitor.rs
socket/: Cargo.toml
socket/src/: error.rs  main.rs
src/: lib.rs  main.rs
src/home/: home.rs  mod.rs
src/home/room/: mod.rs  room.rs
src/home/room/smarthomeunit/: mod.rs  socket.rs  thermometer.rs
src/home/room/unit/: mod.rs  thermometer.rs  unit.rs
src/homes/: home.rs  mod.rs
src/homes/rooms/: mod.rs  room.rs
src/homes/rooms/units/: socket.rs  unit.rs
tests/: integration_test.rs
thermometer/: Cargo.toml
thermometer/src/: error.rs  main.rs
