[package]
name = "smart_home"
default-run = "smart_home_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
async-trait = "0.1.59"
tokio = { version = "1.23.0", features = ["full"] }

[[bin]]
name = "smart_home_bin"
path = "src/main.rs"

[lib]
name = "smart_home_lib"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "tcp_socket"
path = "examples/tcp_socket.rs"
