[package]
name = "smart_home"
default-run = "smart_home_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.29", features = ["full"] }

axum = { version = "0.6", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["cors"] }

[[bin]]
name = "smart_home_bin"
path = "src/main.rs"

[lib]
name = "smart_home_lib"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "tcp_socket"
path = "examples/tcp_socket.rs"
