[package]
name = "socket"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }

async-trait = "0.1.68"
iced = { version = "0.9.0" } 
thiserror = { version = "1.0" }
